NEXT-13585 - account-type is missing in administration

--- a/src/Administration/Resources/app/administration/src/module/sw-customer/component/sw-customer-address-form/sw-customer-address-form.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-customer/component/sw-customer-address-form/sw-customer-address-form.html.twig
@@ -7,7 +7,9 @@
     >
         {% block sw_customer_address_form_company_field %}
         <sw-text-field
+            v-if="isBusinessAccountType"
             v-model="address.company"
+            required
             :label="$tc('sw-customer.addressForm.labelCompany')"
             :error="addressCompanyError"
             :disabled="disabled"
@@ -17,6 +19,7 @@
 
         {% block sw_customer_address_form_department_field %}
         <sw-text-field
+            v-if="isBusinessAccountType"
             v-model="address.department"
             :label="$tc('sw-customer.addressForm.labelDepartment')"
             :error="addressDepartmentError"
