NEXT-18753 - Add force transition in set order state action

--- a/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-set-order-state-modal/sw-flow-set-order-state-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-set-order-state-modal/sw-flow-set-order-state-modal.html.twig
@@ -35,6 +35,15 @@
         :placeholder="$tc('sw-flow.modals.status.placeholderOrderStatus')"
     />
     {% endblock %}
+
+    {% block sw_flow_set_order_state_modal_force_transition %}
+    <sw-checkbox-field
+        v-model="config.force_transition"
+        class="sw-flow-set-order-state-modal__force-transition"
+        :label="$tc('sw-flow.modals.status.forceTransition')"
+        :help-text="$tc('sw-flow.modals.status.forceTransitionHelpText')"
+    />
+    {% endblock %}
     {% endblock %}
 
     {% block sw_flow_set_order_state_modal_footer %}
