--- a/src/Administration/Resources/app/administration/src/app/component/entity/sw-category-tree-field/sw-category-tree-field.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/entity/sw-category-tree-field/sw-category-tree-field.scss
@@ -72,6 +72,12 @@ $sw-category-tree-field-transition-results: all ease-in-out 0.2s;
         transform: translateY(-8px);
         opacity: 0;
     }
+
+    &.is--disabled {
+        .sw-block-field__block {
+            background-color: $color-gray-100;
+        }
+    }
 }
 
 .sw-category-tree-field__results_popover {
