--- a/src/Administration/Resources/app/administration/src/module/sw-settings-rule/page/sw-settings-rule-detail/sw-settings-rule-detail.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-rule/page/sw-settings-rule-detail/sw-settings-rule-detail.html.twig
@@ -91,8 +91,14 @@
 
     {% block sw_settings_rule_detail_content %}
     <template #content>
+        {% block sw_settings_rule_detail_tabs_discard_changes_modal %}
+        <sw-discard-changes-modal
+            v-if="isDisplayingSaveChangesWarning && feature.isActive('v6.5.0.0')"
+            @keep-editing="onLeaveModalClose(nextRoute)"
+            @discard-changes="onLeaveModalConfirm(nextRoute)"
+        />
+        {% endblock %}
         <sw-card-view>
-
             {% block sw_settings_rule_detail_tabs %}
             <sw-tabs
                 v-if="rule && !rule.isNew()"
