NEXT-20851 - Disable extensions menu

--- a/src/Administration/Resources/views/administration/index.html.twig
+++ b/src/Administration/Resources/views/administration/index.html.twig
@@ -81,7 +81,7 @@
             firstRunWizard: {{ firstRunWizard ? 'true' : 'false' }},
             systemCurrencyId: '{{ systemCurrencyId }}',
             systemCurrencyISOCode: '{{ systemCurrencyISOCode }}',
-            disableExtensions: '{{ disableExtensions }}'
+            disableExtensions: {{ disableExtensions ? 'true' : 'false' }}
         }
     });
 </script>
