NEXT-20983 - Improve pricing inheritance

--- a/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/component/product/sw-bulk-edit-product-visibility/sw-bulk-edit-product-visibility.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/component/product/sw-bulk-edit-product-visibility/sw-bulk-edit-product-visibility.html.twig
@@ -17,7 +17,7 @@
                 :entity-collection="currentValue"
                 :placeholder="$tc('sw-product.visibility.placeholderVisibility')"
                 :disabled="disabled"
-                @change="(value) => updateCurrentValue(value)"
+                @change="updateCurrentValue"
             />
         </template>
     </sw-inherit-wrapper>
