--- a/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/page/sw-bulk-edit-product/sw-bulk-edit-product.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/page/sw-bulk-edit-product/sw-bulk-edit-product.scss
@@ -1,6 +1,29 @@
 @import "~scss/variables";
 
 .sw-bulk-edit-product {
+    &.is--variant {
+        // Hide form-field-renderer for price inheritance field
+        .sw-bulk-edit-change-field-isPriceInherited .sw-form-field-renderer {
+            display: none;
+        }
+
+        // Hide checkbox for price, purchasePrices, listPrice and regulationPrice
+        .sw-bulk-edit-change-field-price .sw-field__checkbox,
+        .sw-bulk-edit-change-field-purchasePrices .sw-field__checkbox,
+        .sw-bulk-edit-change-field-listPrice .sw-field__checkbox,
+        .sw-bulk-edit-change-field-regulationPrice .sw-field__checkbox {
+            display: none;
+        }
+
+        // Adjust space after hiding those checkboxes
+        .sw-bulk-edit-change-field-price .sw-field--checkbox__content,
+        .sw-bulk-edit-change-field-purchasePrices .sw-field--checkbox__content,
+        .sw-bulk-edit-change-field-listPrice .sw-field--checkbox__content,
+        .sw-bulk-edit-change-field-regulationPrice .sw-field--checkbox__content {
+            grid-template-columns: 1fr;
+        }
+    }
+
     .sw-card .sw-card__content {
         padding: 0;
 
