NEXT-20737 - Avoid accidental closing of modals

--- a/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-change-customer-group-modal/sw-flow-change-customer-group-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-change-customer-group-modal/sw-flow-change-customer-group-modal.html.twig
@@ -2,6 +2,7 @@
 <sw-modal
     class="sw-flow-change-customer-group-modal"
     :title="$tc('sw-flow.modals.customerGroup.titleChangeCustomerGroup')"
+    :closable="false"
     @modal-close="onClose"
 >
     {% block sw_flow_change_customer_group_modal_select %}
