--- a/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-create-mail-template-modal/sw-flow-create-mail-template-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-create-mail-template-modal/sw-flow-create-mail-template-modal.html.twig
@@ -2,6 +2,7 @@
 <sw-modal
     class="sw-flow-create-mail-template-modal"
     :title="$tc('sw-flow.modals.mail.titleNewEmailTemplate')"
+    :closable="false"
     @modal-close="onClose"
 >
     {% block sw_flow_create_mail_template_modal_content %}
