--- a/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-mail-send-modal/sw-flow-mail-send-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-mail-send-modal/sw-flow-mail-send-modal.html.twig
@@ -2,6 +2,7 @@
 <sw-modal
     class="sw-flow-mail-send-modal"
     :title="$tc('sw-flow.modals.mail.titleSendMail')"
+    :closable="false"
     @modal-close="onClose"
 >
     {% block sw_flow_mail_send_modal_recipient %}
