--- a/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-rule-modal/sw-flow-rule-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-rule-modal/sw-flow-rule-modal.html.twig
@@ -4,6 +4,7 @@
     variant="large"
     :title="modalTitle"
     :is-loading="isLoading"
+    :closable="false"
     @modal-close="onClose"
 >
     {% block sw_flow_rule_modal_tabs %}
