--- a/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-set-entity-custom-field-modal/sw-flow-set-entity-custom-field-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-set-entity-custom-field-modal/sw-flow-set-entity-custom-field-modal.html.twig
@@ -2,6 +2,7 @@
 <sw-modal
     class="sw-flow-set-entity-custom-field-modal"
     :title="$tc('sw-flow.modals.setEntityCustomField.title')"
+    :closable="false"
     @modal-close="onClose"
 >
     {% block sw_flow_set_entity_custom_field_modal_content %}
