--- a/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-set-order-state-modal/sw-flow-set-order-state-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-set-order-state-modal/sw-flow-set-order-state-modal.html.twig
@@ -2,6 +2,7 @@
 <sw-modal
     class="sw-flow-set-order-state-modal"
     :title="$tc('sw-flow.modals.status.titleSetStatus')"
+    :closable="false"
     @modal-close="onClose"
 >
     {% block sw_flow_set_order_state_modal_content %}
