--- a/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-tag-modal/sw-flow-tag-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-tag-modal/sw-flow-tag-modal.html.twig
@@ -2,6 +2,7 @@
 <sw-modal
     class="sw-flow-tag-modal"
     :title="$tc('sw-flow.modals.tag.labelAddTag')"
+    :closable="false"
     @modal-close="onClose"
 >
     {% block sw_flow_tag_modal_content %}
