--- a/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-affiliate-and-campaign-code-modal/sw-flow-affiliate-and-campaign-code-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-affiliate-and-campaign-code-modal/sw-flow-affiliate-and-campaign-code-modal.html.twig
@@ -2,6 +2,7 @@
 <sw-modal
     class="sw-flow-affiliate-and-campaign-code-modal"
     :title="$tc('sw-flow.modals.affiliateAndCampaignCode.title')"
+    :closable="false"
     @modal-close="onClose"
 >
     {% block sw_flow_affiliate_and_campaign_code_modal_content %}
