--- a/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-generate-document-modal/sw-flow-generate-document-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-generate-document-modal/sw-flow-generate-document-modal.html.twig
@@ -2,6 +2,7 @@
 <sw-modal
     class="sw-flow-generate-document-modal"
     :title="$tc('sw-flow.modals.document.titleCreateDocument')"
+    :closable="false"
     @modal-close="onClose"
 >
     {# @deprecated tag:v6.5.0 - The block content will be remove use block `sw_flow_generate_document_modal_document_type_multiple instead` #}
