NEXT-18115 - add additional slot to card

--- a/src/Administration/Resources/app/administration/src/app/component/base/sw-card/sw-card.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/base/sw-card/sw-card.html.twig
@@ -42,7 +42,11 @@
                         {{ subtitle }}
                     </div>
                 </slot>
-            {% endblock %}
+                {% endblock %}
+            </div>
+
+            <div class="sw-card__titles-right-slot">
+                <slot name="header-right"></slot>
             </div>
 
             <slot name="tabs"></slot>
