NEXT-19677 - Fix custom field technical name is displayed on click in dropdown

--- a/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-set-entity-custom-field-modal/sw-flow-set-entity-custom-field-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-set-entity-custom-field-modal/sw-flow-set-entity-custom-field-modal.html.twig
@@ -26,6 +26,7 @@
             class="sw-flow-set-entity-custom-field-modal__custom-field-set"
             entity="custom_field_set"
             required
+            :label-property="labelProperty"
             :disabled="!entity"
             :criteria="customFieldSetCriteria"
             :label="$tc('sw-flow.modals.setEntityCustomField.customFieldSet')"
@@ -49,6 +50,7 @@
             class="sw-flow-set-entity-custom-field-modal__custom-field"
             entity="custom_field"
             required
+            :label-property="labelProperty"
             :label="$tc('sw-flow.modals.setEntityCustomField.customField')"
             :disabled="!customFieldSetId"
             :criteria="customFieldCriteria"
