--- a/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-settings-country-general/sw-settings-country-general.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-settings-country-general/sw-settings-country-general.html.twig
@@ -258,16 +258,9 @@
             />
             {% endblock %}
 
+            {# @deprecated tag:v6.5.0 - block will be removed #}
             <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
-            {% block sw_settings_country_general_content_field_force_state_on_registration %}
-            <sw-switch-field
-                v-model="country.forceStateInRegistration"
-                class="sw-settings-country-general__option-items"
-                bordered
-                :disabled="!acl.can('country.editor')"
-                :label="$tc('sw-settings-country.detail.labelForceStateInRegistration')"
-            />
-            {% endblock %}
+            {% block sw_settings_country_general_content_field_force_state_on_registration %}{% endblock %}
         </sw-container>
     </sw-card>
     {% endblock %}
