--- a/src/Administration/Resources/app/administration/src/module/sw-media/component/sw-media-library/sw-media-library.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-media/component/sw-media-library/sw-media-library.scss
@@ -17,6 +17,7 @@ $sw-media-library-color-background: $color-white;
         grid-gap: 16px;
         justify-content: end;
         justify-items: end;
+        z-index: $z-index-overlay;
 
         @media (max-width: 1550px) {
             grid-auto-flow: row;
@@ -31,6 +32,8 @@ $sw-media-library-color-background: $color-white;
         &:hover .sw-media-base-item__selected-indicator {
             visibility: hidden;
         }
+
+        z-index: $z-index-overlay;
     }
 
     .sw-media-library__scroll-container {
