NEXT-20418 - Allow apps to request additional priviliges

--- a/src/Administration/Resources/app/administration/src/module/sw-extension/component/sw-extension-permissions-details-modal/sw-extension-permissions-details-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-extension/component/sw-extension-permissions-details-modal/sw-extension-permissions-details-modal.html.twig
@@ -64,7 +64,7 @@
                         />
 
                         <sw-icon
-                            v-else
+                            v-else-if="category !== 'additional_privileges'"
                             name="small-default-x-line-medium"
                             :small="true"
                             color="#DE294C"
