--- a/src/Administration/Resources/app/administration/src/module/sw-extension/component/sw-extension-permissions-details-modal/sw-extension-permissions-details-modal.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-extension/component/sw-extension-permissions-details-modal/sw-extension-permissions-details-modal.scss
@@ -42,5 +42,9 @@
         .sw-extension-permissions-details-modal__operation {
             text-align: center;
         }
+
+        .sw-extension-permissions-details-modal__operation-header {
+            text-align: center;
+        }
     }
 }
