NEXT-18634 - Save changes modal when having unsaved changes

--- a/src/Administration/Resources/app/administration/src/module/sw-flow/page/sw-flow-detail/sw-flow-detail.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/page/sw-flow-detail/sw-flow-detail.html.twig
@@ -32,6 +32,14 @@
 
     {% block sw_flow_content %}
     <template #content>
+        {% block sw_flow_leave_page_modal %}
+        <sw-flow-leave-page-modal
+            v-if="showLeavePageWarningModal"
+            @page-leave-cancel="onLeaveModalClose"
+            @page-leave-confirm="onLeaveModalConfirm"
+        />
+        {% endblock %}
+
         <sw-card-view>
             {% block sw_flow_tabs_header %}
             <sw-tabs position-identifier="sw-flow-detail">
