--- a/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-settings-country-address-handling/sw-settings-country-address-handling.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-settings-country-address-handling/sw-settings-country-address-handling.html.twig
@@ -42,7 +42,7 @@
             v-model="country.checkAdvancedPostalCodePattern"
             class="sw-settings-country-address-handling__option-items"
             bordered
-            :disabled="!acl.can('country.editor')"
+            :disabled="!acl.can('country.editor') || !country.checkPostalCodePattern"
             :label="$tc('sw-settings-country.detail.labelCheckAdvancedPostalCodePattern')"
         />
         {% endblock %}
@@ -78,10 +78,11 @@
         {% block sw_settings_country_address_handling_formatting_card_field_address_format_plain %}
         <sw-code-editor
             ref="plainEditor"
-            v-model="country.advancedAddressFormatPlain"
-            :class="{'is--disabled': country.useDefaultAddressFormat}"
+            v-model="addressFormat"
             name="format_plain"
             completion-mode="entity"
+            :class="{'is--disabled': country.useDefaultAddressFormat}"
+            :completer-function="outerCompleterFunction"
             :label="$tc('sw-settings-country.detail.labelAddressFormatPlain')"
             :editor-config="editorConfig"
             :disabled="!acl.can('country.editor')"
