--- a/src/Administration/Resources/app/administration/src/module/sw-settings-country/page/sw-settings-country-detail/sw-settings-country-detail.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-country/page/sw-settings-country-detail/sw-settings-country-detail.html.twig
@@ -210,6 +210,25 @@
                 {% endblock %}
             </template>
         </sw-card-view>
+
+        {% block sw_settings_country_detail_preview_template_modal %}
+        <sw-settings-country-preview-template-modal
+            v-if="showPreviewModal"
+            :preview-data="previewData"
+            :country="country"
+            @modal-close="closePreviewModal"
+        />
+        {% endblock %}
+    </template>
+    {% endblock %}
+
+    {% block sw_settings_country_detail_sidebar %}
+    <template #sidebar>
+        <sw-settings-country-sidebar
+            v-if="showSidebar"
+            :is-loading="isLoading"
+            @open-preview-modal="openPreviewModal"
+        />
     </template>
     {% endblock %}
 </sw-page>
